# bad-framework

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
bad_framework/: __init__.py
bad_framework/bad_candidates/: Dummy.py  FeatureBagging.py  IForest.py  KNN.py  LOCI.py  LOF.py  OCSVM.py  PartKNN.py  PartitionedLOF.py  __init__.py  dummy.py  feature_bagging.py  iforest.py  knn.py  loci.py  lof.py  ocsvm.py  partknn.py
bad_framework/bad_client/: __init__.py  cli.py  monitor.py  settings.py  ui.py
bad_framework/bad_master/: __init__.py  models.py  server.py  views.py
bad_framework/bad_utils/: __init__.py  adt.py  errors.py  exceptions.py  files.py  magic.py  network.py
bad_framework/bad_worker/: __init__.py  server.py  views.py
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/pages/: architecture.html  candidate.html  candidates.html  citing.html  contributing.html  contributions.html  datasets.html  datasets.rst  execution.html  installation.html  parameters.html  usage.html
docsrc/: conf.py  index.rst
docsrc/pages/: architecture.rst  candidate.rst  candidates.rst  citing.rst  contributing.rst  contributions.rst  datasets.html  datasets.rst  execution.html  installation.rst  parameters.html  parameters.rst  usage.rst
tests/: conftest.py  test_abc.py
tests/bad_candidates/: test_dummy.py  test_knn.py  (+1 more)
(+46 files in other folders)
