[tool.poetry]
name = "bad-framework"
version = "0.1.4"
description = "A benchmarking framework for anomaly detection algorithms."
authors = ["Sivam Pasupathipillai <sivam.pasupathipillai@gmail.com>"]
readme = "README.md"
packages = [{include = "bad_framework"}]
include = ["bad_framework/include/**/*"]

[tool.poetry.scripts]
bad = "bad_framework.bad_client:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
httpx = "^0.23.0"
jinja2 = "^3.1.2"
matplotlib = "<3.6"
numpy = "^1.23.4"
pyod = "^1.0.6"
requests = "^2.28.1"
scikit-learn = "^1.1.3"
tornado = "^6.2"
combo = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
tox = "^3.26.0"
black = "^22.8.0"
mypy = "^0.981"
isort = "^5.10.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = "--cov=bad_framework --cov-fail-under=40 --doctest-modules --maxfail=1 --verbosity=2"

[tool.black]
line-length = 90
target-version = ['py38']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
